fixed padding on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -141,7 +141,7 @@ figure img {
 main {
   max-width: var(--wrapper-width);
   margin: 0 auto;
-  padding-bottom: 100px;
+  padding: 10px 10px 100px;
   display: flex;
   flex-direction: column;
   gap: var(--space);
@@ -538,6 +538,7 @@ html[data-theme='cyber'] .window-content-salutations {
   display: grid;
   place-items: center;
   flex: none;
+  border-radius: 50%;
 }
 
 .notes-list-title {
